Re-order table of contents, bump to 0.4

--- a/spec/fixtures/pr.html
+++ b/spec/fixtures/pr.html
@@ -2,9 +2,28 @@
 <html>
   <head>
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script type="text/javascript" src="../../pr-spec.js"></script>
+    <script type="text/javascript" src="../../pr-favors.js"></script>
   </head>
   <body>
+    <div id="toc">
+      <ol>
+        <li>
+          file
+        </li>
+        <li>
+          file_2
+        </li>
+        <li>
+          file_spec
+        </li>
+        <li>
+          file_2_spec
+        </li>
+        <li>
+          feature_spec
+        </li>
+      </ol>
+    </div>
     <div id="files">
       <a></a>
       <div>
@@ -33,7 +52,7 @@
       <a></a>
       <div>
         <div class="file-header" data-path="spec/features/feature_spec.rb">
-          feature spec
+          feature_spec
         </div>
       </div>
     </div>
