Update to be better with feature specs.
- Requires stronger proof "spec/feature" for feature spec.
- Updates test fixtures to get them working again.
- Bump version number

--- a/spec/fixtures/pr.html
+++ b/spec/fixtures/pr.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script type="text/javascript" src="../../pr-favors.js"></script>
   </head>
   <body>
     <div id="toc">
@@ -22,9 +20,12 @@
         <li>
           feature_spec
         </li>
+        <li>
+          support_for_feature_spec
+        </li>
       </ol>
     </div>
-    <div id="files">
+    <div id="files" class="diff-view">
       <a></a>
       <div>
         <div class="file-header" data-path="app/controllers/file.rb">
@@ -55,6 +56,14 @@
           feature_spec
         </div>
       </div>
+      <a></a>
+      <div>
+        <div class="file-header" data-path="spec/support/features/feature_spec.rb">
+          support_for_feature_spec
+        </div>
+      </div>
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="../../pr-favors.js"></script>
   </body>
 </html>
