Match entire path, not just file name.

--- a/spec/fixtures/pr.html
+++ b/spec/fixtures/pr.html
@@ -6,22 +6,28 @@
     <div id="toc">
       <ol>
         <li>
-          file
+          app/controllers/file.rb
         </li>
         <li>
-          file_2
+          app/controllers/file_2.rb
         </li>
         <li>
-          file_spec
+          app/services/file_2.rb
         </li>
         <li>
-          file_2_spec
+          spec/controllers/file_spec.rb
         </li>
         <li>
-          feature_spec
+          spec/controllers/file_2_spec.rb
         </li>
         <li>
-          support_for_feature_spec
+          spec/services/file_2_spec.rb
+        </li>
+        <li>
+          spec/features/feature_spec.rb
+        </li>
+        <li>
+          spec/support/features/feature_spec.rb
         </li>
       </ol>
     </div>
@@ -29,37 +35,49 @@
       <a></a>
       <div>
         <div class="file-header" data-path="app/controllers/file.rb">
-          file
+          app/controllers/file.rb
         </div>
       </div>
       <a></a>
       <div>
         <div class="file-header" data-path="app/controllers/file_2.rb">
-          file_2
+          app/controllers/file_2.rb
+        </div>
+      </div>
+      <a></a>
+      <div>
+        <div class="file-header" data-path="app/services/file_2.rb">
+          app/services/file_2.rb
         </div>
       </div>
       <a></a>
       <div>
         <div class="file-header" data-path="spec/controllers/file_spec.rb">
-          file_spec
+          spec/controllers/file_spec.rb
         </div>
       </div>
       <a></a>
       <div>
         <div class="file-header" data-path="spec/controllers/file_2_spec.rb">
-          file_2_spec
+          spec/controllers/file_2_spec.rb
+        </div>
+      </div>
+      <a></a>
+      <div>
+        <div class="file-header" data-path="spec/services/file_2_spec.rb">
+          spec/services/file_2_spec.rb
         </div>
       </div>
       <a></a>
       <div>
         <div class="file-header" data-path="spec/features/feature_spec.rb">
-          feature_spec
+          spec/features/feature_spec.rb
         </div>
       </div>
       <a></a>
       <div>
         <div class="file-header" data-path="spec/support/features/feature_spec.rb">
-          support_for_feature_spec
+          spec/support/features/feature_spec.rb
         </div>
       </div>
     </div>
